<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tumplar</string>
    <string name="drawer_header_background_content_description">drawer header background</string>

    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="likes">Likes</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="title_login">Login</string>
    <string name="not_logged_in">not logged in</string>

    <string name="oauth_callback_scheme" translatable="false">oauth_callback</string>
    <string name="oauth_callback_host" translatable="false">callback</string>
    <string name="error_unknown">Unknown error occured</string>
    <string name="msg_authorizing">Authorizing...</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_accessing_token">Accessing token...</string>
    <string name="retry">Retry</string>
    <string name="msg_token_accessed">Login succeeded</string>
    <string name="msg_confirm_logout">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="error_auth_failed">Authorization failed</string>

    <string name="source">source</string>
    <string name="archived">Archived</string>
    <string name="newest">Newest</string>
    <string name="download">download</string>
    <string name="list">list</string>
    <string name="flow">flow</string>
    <string name="grid">grid</string>

    <string name="changelog">Changelog</string>
    <string name="feedback">Feedback</string>
    <string name="license">License</string>
    <string name="version">Version</string>

    <string name="pref_key_changelog" translatable="false">key_changelog</string>
    <string name="pref_key_feedback" translatable="false">key_feedback</string>
    <string name="pref_key_license" translatable="false">key_license</string>
    <string name="pref_key_version" translatable="false">key_version</string>

    <string name="pref_key_avatar_quality">pref_key_avatar_quality</string>
    <string name="pref_key_preview_quality">pref_key_preview_quality</string>

    <string name="email_chihane" translatable="false">chihane@yeah.net</string>
    <string name="mailto_chihane" translatable="false">mailto:chihane@yeah.net</string>
    <string name="subject_feedback">Feedback about Tumplar</string>

    <string name="close">Close</string>

    <string name="download_capital">Download</string>

    <string name="avatar_quality">Avatar Quality</string>
    <string name="tiny">16*16</string>
    <string name="small">48*48</string>
    <string name="normal">64*64</string>
    <string name="large">128*128</string>
    <string name="huge">512*512</string>
    <string name="value_tiny">16</string>
    <string name="value_small">48</string>
    <string name="value_normal">64</string>
    <string name="value_large">128</string>
    <string name="value_huge">512</string>

    <string name="preview_quality">Preview Quality</string>
    <string name="original_quality">Original</string>
    <string name="high_quality">High</string>
    <string name="medium_quality">Medium</string>
    <string name="low_quality">Low</string>
    <string name="value_original_quality">0</string>
    <string name="value_high_quality">1</string>
    <string name="value_medium_quality">2</string>
    <string name="value_low_quality">3</string>
</resources>
