<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/pref_key_changelog"
        android:title="@string/changelog"/>

    <Preference
        android:key="@string/pref_key_feedback"
        android:summary="@string/email_chihane"
        android:title="@string/feedback">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/mailto_chihane">
            <extra
                android:name="android.intent.extra.SUBJECT"
                android:value="@string/subject_feedback"/>
        </intent>
    </Preference>

    <Preference
        android:key="@string/pref_key_license"
        android:title="@string/license"/>

    <Preference
        android:key="@string/pref_key_version"
        android:title="@string/version"/>
</PreferenceScreen>