<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:icon="@mipmap/ic_dashboard_black_24dp"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/menu_likes"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/likes" />
    </group>

    <group android:id="@+id/sub_header">
        <item
            android:id="@+id/menu_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/menu_help"
            android:icon="@mipmap/ic_help_black_24dp"
            android:title="@string/help" />
    </group>
</menu>